--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: SherlockFog
 description: |
     SherlockFog is a tool aimed at network researchers that allows arbitrary topologies to be deployed
     on a local network in order to execute parallel and distributed applications under different network
-    contitions.
+    conditions.
 
 github:
     is_project_page: true
